tests/good/24_bool_vars.src
# Test: Boolean variables
void main([string] args) {
    bool x = true;
    bool y = false;
    print_bool(x && !y);
}
