tests/bad/10_return_type.src
# Test: Return type mismatch
void main() {
    return true;  # Return type mismatch: int function returns bool
}
